--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.6",
