--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.1",
     "n8n": "^2.6.4",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-is": "^19.2.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.7.0"
