--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.1",
+    "fuse.js": "^7.1.0",
     "n8n": "^2.6.4",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
