install google OAuth Service

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@google/generative-ai": "^0.24.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "@react-oauth/google": "^0.13.4",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.1",
     "fuse.js": "^7.1.0",
+    "jwt-decode": "^4.0.0",
     "n8n": "^2.6.4",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
